<resources>
    <string name="app_name">Pizza Application</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="place_order">Place Order</string>
    <string name="no_cheese">No Cheese</string>
    <string name="cheese">Cheese</string>
    <string name="_2x_cheese">2x Cheese</string>
    <string name="pepperoni">pepperoni</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="veggies">Veggies</string>
    <string name="anchovies">Anchovies</string>
    <string name="round">ROUND</string>
    <string name="square">SQUARE</string>
    <string name="ingredients">Ingredients</string>
</resources>
