<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


<!--    <EditText-->
<!--        android:id="@+id/customer_name"-->
<!--        android:layout_width="189dp"-->
<!--        android:layout_height="49dp"-->
<!--        android:layout_marginTop="460dp"-->
<!--        android:hint="@string/name"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/customer_phone_no"-->
<!--        android:layout_width="189dp"-->
<!--        android:layout_height="49dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:hint="@string/phone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/customer_name" />-->

<!--    <Button-->
<!--        android:id="@+id/square"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="3dp"-->
<!--        android:text="@string/square"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/chip_group"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/round"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.964" />-->

<!--    <Button-->
<!--        android:id="@+id/round"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="124dp"-->
<!--        android:layout_marginBottom="3dp"-->
<!--        android:text="@string/round"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/chip_group"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.984" />-->


    <ImageView
        android:id="@+id/selected_pizza_image"
        android:layout_width="149dp"
        android:layout_height="120dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/ic_not_selected_pizza"
        app:layout_constraintBottom_toTopOf="@+id/radio_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <RadioGroup
        android:id="@+id/radio_shape"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_round"
            android:layout_width="81dp"
            android:layout_height="33dp"
            android:background="@drawable/custom_radio_button"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radio_square"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radio_square"
            android:layout_width="85dp"
            android:layout_height="33dp"
            android:background="@drawable/custom_radio_button"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/square"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666" />

    </RadioGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="379dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toTopOf="@+id/ingredients_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ingredients_card_view"
        android:layout_width="331dp"
        android:layout_height="219dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/contact_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/pepperoni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/pepperoni"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.229" />

            <CheckBox
                android:id="@+id/mush_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/mushrooms"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pepperoni"
                app:layout_constraintVertical_bias="0.073" />

            <CheckBox
                android:id="@+id/veggies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/veggies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"
                app:layout_constraintHorizontal_bias="0.366"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mush_rooms"
                app:layout_constraintVertical_bias="0.095" />

            <CheckBox
                android:id="@+id/anchovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="5dp"
                android:text="@string/anchovies"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"
                app:layout_constraintHorizontal_bias="0.453"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/veggies"
                app:layout_constraintVertical_bias="0.088" />


            <RadioGroup
                android:id="@+id/radio_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.346">

                <RadioButton
                    android:id="@+id/radio_no_Cheese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_cheese" />

                <RadioButton
                    android:id="@+id/radio_cheese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese" />

                <RadioButton
                    android:id="@+id/radio_2x_cheese"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2x_cheese" />
            </RadioGroup>

            <TextView
                android:id="@+id/ingredients_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/pepperoni"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.516" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_card_view"
        android:layout_width="331dp"
        android:layout_height="141dp"
        android:layout_marginTop="475dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/place_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp">

            <EditText
                android:id="@+id/customer_name"
                android:layout_width="302dp"
                android:layout_height="51dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="12dp"
                android:hint="@string/name"
                android:paddingStart="12dp"
                app:layout_constraintBottom_toTopOf="@+id/customer_phone_no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.372" />

            <EditText
                android:id="@+id/customer_phone_no"
                android:layout_width="302dp"
                android:layout_height="51dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:drawablePadding="12dp"
                android:hint="@string/phone"
                android:paddingStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




    <Button
        android:id="@+id/place_order"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_card_view"
        app:layout_constraintVertical_bias="1.0" />

    <!--    <RadioGroup-->
<!--        android:id="@+id/radio_ingredients"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.731"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.516">-->

<!--        <RadioButton-->
<!--            android:id="@+id/radio_no_Cheese"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/no_cheese" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/radio_cheese"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/cheese" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/radio_2x_cheese"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/_2x_cheese" />-->
<!--    </RadioGroup>-->

<!--    <CheckBox-->
<!--        android:id="@+id/pepperoni"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="80dp"-->
<!--        android:text="@string/pepperoni"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/mush_rooms"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.815" />-->

<!--    <CheckBox-->
<!--        android:id="@+id/mush_rooms"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="28dp"-->
<!--        android:text="@string/mushrooms"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/veggies"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"-->
<!--        app:layout_constraintHorizontal_bias="0.661"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <CheckBox-->
<!--        android:id="@+id/veggies"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="104dp"-->
<!--        android:text="@string/veggies"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/customer_name"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"-->
<!--        app:layout_constraintHorizontal_bias="0.59"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <CheckBox-->
<!--        android:id="@+id/anchovies"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/anchovies"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/customer_name"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/radio_ingredients"-->
<!--        app:layout_constraintHorizontal_bias="0.61"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/veggies" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>